# StegLove

./: README.md  test.py
Desctop Aplication - releace/: moc_dialogtoolrec.cpp  moc_mainwindow.cpp  moc_predefs.h
Desctop Aplication - releace/qw/: doc.txt  (+2 more)
Desctop Aplication - release/: file2.res  moc_dialogrec.cpp  moc_mainwindow.cpp
Desctop Aplication - sourse/: StegLove.pro  consolewidget.cpp  dialogfilerec.ui  dialogrec.cpp  dialogrec.ui  dialogtoolrec.h  dialogtoolrec.ui  mainwindow.h
Desctop Aplication - sourсes/: dialogfilerec.h  main.cpp  mainwindow.cpp  mainwindow.ui
Desktop Aplication - release/: moc_dialogfilerec.cpp  moc_dialogtoolrec.cpp
Desktop Aplication - sourсes/: dialogfilerec.ui  dialogtoolrec.cpp
Desktop Application - release/: moc_predefs.h
Desktop Application - sourсes/: dialogfilerec.cpp  scaledpixmap.cpp  untitled.pro
Screenshots/: README.md
StegLove/: consolewidget.h  dialogrec.h  dialogrec.ui  dialogtoolrec.cpp  jsonfilter.cpp  jsonfilter.h  jsonparser.cpp  jsonparser.h  main.cpp  mainwindow.cpp  mainwindow.ui  scaledpixmap.h
Translations/: README-RU.md  README.md
Web Aplication - sourse/: docker-compose.yml
Web Application - sources/: docker-compose.yml
Web Application - sources/app/core/uuid-generator/: cabal.project  myuuid.hi  myuuid.hs  uuid-list.cabal
Web Application - sources/app/core/uuid-generator/src/: FeistelPermutation.hi  FeistelPermutation.hs  UUIDList.hi  UUIDList.hs
app/: Dockerfile
release/: moc_consolewidget.cpp  moc_dialogfilerec.cpp  moc_dialogrec.cpp  moc_jsonfilter.cpp  moc_jsonparser.cpp
(+117 files in other folders)
